<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:text="@string/texto2"
        android:textSize="20dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/boton3" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/boton4" />

    <Button
        android:id="@+id/button5"
        android:layout_width="186dp"
        android:layout_height="114dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/boton5" />
    
     <ImageView
        android:id="@+id/imageView1"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.24"
        android:src="@drawable/cumple" />

</LinearLayout>