<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="17dp"
        android:layout_weight="0.02"
        android:text="@string/texto"
        android:textSize="25dp" />

    <DatePicker
        android:id="@+id/datePicker1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_weight="0.00"
        android:text="@string/Button" />
    
     <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/boton5" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.24"
        android:src="@drawable/cumple" />

</LinearLayout>