<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="17dp"
        android:text="@string/texto" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="-30dp"
        android:ems="10" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_weight="0.00"
        android:text="@string/Button" />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/boton5" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.24"
        android:src="@drawable/cumple" />

</LinearLayout>